--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="cartao__conteudo">
                 <h3>Tema</h3>
                 <div class="cartao__conteudo__pergunta">
-                    <p>Local da pejhfghudgfuydfeguyegrgunta 1 ?</p>
+                    <p>Local da pergunta 1 ?</p>
                 </div>
                 <div class="cartao__conteudo__resposta">
                     <p> Local destinado a resposta da pergunta 1.</p>
